week01/styles/layout.css
body {
    display: grid;
    grid-template-columns: 3fr 1fr;
}

.navigation {
    grid-column: 1/3;
    display: flex;
    font-family: "Roboto", sans-serif;
    background-color: #000;
    width: 100%;
    text-align: center;
}
.navigation a {
    padding: 1em;
    flex: 1 1 100%;
    text-decoration: none;
    color: #fff;
}
.navigation a:hover {
    border-bottom: 3px solid yellow;
    /* text-decoration: underline; */
    font-weight: 700;
}

header{
    grid-column: 1/3;
    color: #ddd;
    background-color: #555;
    padding: 0;
}

header h1 {
    padding: 1em;
}

main {
    background-color: #ddd;
    padding: 1em;
    height: 50vh;
}

.aside {
    padding: 1em;
}

footer {
    grid-column: 1/3;
    color: #ddd;
    padding-bottom: 5em;
    background-color: #555;
    text-align: center;
}

